--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Freelancer - Start Bootstrap Theme</title>
+        <title>Filip Misiejuk - Portfolio</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
