--- a/index.html
+++ b/index.html
@@ -682,10 +682,10 @@ function MM_swapImage() { //v3.0
                   <br>
                 <!-- Portfolio Modal - Text-->
                 <p class="mb-4">
-					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tTyVAPlhoOL3QgsA"><strong>Steamduck - GDD (WIP)</strong></a><br>
-					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tRgw0clJeklgqKgQ"><strong>The Pit - GDD (WIP)</strong></a><br>
-					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tSYYe0Wo_LbR_lpw"><strong>Solar Ark - GDD (WIP)</strong></a><br>
-					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tUC3xrA3GexgK3pQ"><strong>Eco - GDD (WIP)</strong></a><br>
+					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tTyVAPlhoOL3QgsA" target="_blank"><strong>Steamduck - GDD (WIP)</strong></a><br>
+					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tRgw0clJeklgqKgQ" target="_blank"><strong>The Pit - GDD (WIP)</strong></a><br>
+					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tSYYe0Wo_LbR_lpw" target="_blank"><strong>Solar Ark - GDD (WIP)</strong></a><br>
+					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tUC3xrA3GexgK3pQ" target="_blank"><strong>Eco - GDD (WIP)</strong></a><br>
 				</p>
               </div>
             </div>
