--- a/index.html
+++ b/index.html
@@ -684,8 +684,8 @@ function MM_swapImage() { //v3.0
                 <p class="mb-4">
 					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tTyVAPlhoOL3QgsA" target="_blank"><strong>Steamduck - GDD (WIP)</strong></a><br>
 					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tRgw0clJeklgqKgQ" target="_blank"><strong>The Pit - GDD (WIP)</strong></a><br>
-					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tSYYe0Wo_LbR_lpw" target="_blank"><strong>Solar Ark - GDD (WIP)</strong></a><br>
-					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tUC3xrA3GexgK3pQ" target="_blank"><strong>Eco - GDD (WIP)</strong></a><br>
+					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tSYYe0Wo_LbR_lpw" target="_blank"><strong>Solar Ark - GDD</strong></a><br>
+					<a href="https://1drv.ms/b/s!Ai7r5mP6tSkDg9tUC3xrA3GexgK3pQ" target="_blank"><strong>Eco - GDD</strong></a><br>
 				</p>
               </div>
             </div>
