--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ function MM_swapImage() { //v3.0
               <div class="row">
                     <div class="col-lg-4 ms-auto">
                       <p class="lead">I am a game developer fresh out of college. I mainly specialize in game design as well as basic programming in UE4 and Unity engines.</p>
-                      <p class="lead">I do also, however, have some minor experience with concept art, level design and 2D animation.</p>
+                      <p class="lead">I do also, however, have some experience with 2D Art and level design.</p>
                     </div>
                     <div class="col-lg-4 me-auto"><p class="lead">I'm always excited to work on some new projects!</p></div>
                 </div>
