--- a/index.html
+++ b/index.html
@@ -478,6 +478,7 @@
 
                     <h2 class="portfolio-modal text-secondary mb-0"></h2>
                     <br>
+					<center>
                     <div class="gallery">
 					  <a href="assets/img/portfolio/level1.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level1 (Niestandardowy).jpg"/></a>
 					  <a href="assets/img/portfolio/level2.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level2 (Niestandardowy).jpg"/></a>
