--- a/index.html
+++ b/index.html
@@ -486,6 +486,17 @@
 					  <a href="assets/img/portfolio/level4.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level4 (Niestandardowy).jpg"/></a>
 					  <a href="assets/img/portfolio/level5.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level5 (Niestandardowy).jpg"/></a>
 					  <a href="assets/img/portfolio/level6.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level6 (Niestandardowy).jpg"/></a>
+						<a href="assets/img/portfolio/level7.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level7 (Niestandardowy).jpg"/></a>
+						<a href="assets/img/portfolio/level8.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level8 (Niestandardowy).jpg"/></a>
+						<div class="divider-custom">
+                  <div class="divider-custom-line"></div>
+                  <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                  <div class="divider-custom-line"></div>
+                </div>
+				  <h2 class="portfolio-modal text-secondary mb-0">Animated Concepts(WIP)</h2>
+                  <br>
+						<iframe src="https://drive.google.com/file/d/1B1fGkcso7JUHY2vuCDSdoAx4LJo9aQoB/preview" width="640" height="480" allow="autoplay"></iframe>
+						<iframe src="https://drive.google.com/file/d/1JS-iSvOx2wVV5KH7-WRL90UQ81ru69kC/preview" width="640" height="480" allow="autoplay"></iframe>
                 </div>
                   </center>
 					
