--- a/index.html
+++ b/index.html
@@ -488,6 +488,9 @@
 					  <a href="assets/img/portfolio/level6.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level6 (Niestandardowy).jpg"/></a>
 						<a href="assets/img/portfolio/level7.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level7 (Niestandardowy).jpg"/></a>
 						<a href="assets/img/portfolio/level8.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level8 (Niestandardowy).jpg"/></a>
+						<a href="assets/img/portfolio/level9.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level9 (Niestandardowy).jpg"/></a>
+						<a href="assets/img/portfolio/level10.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level10 (Niestandardowy).jpg"/></a>
+						<a href="assets/img/portfolio/level11.jpg" data-lightbox="levelGallery" data-title=""><img src="assets/img/portfolio/level11 (Niestandardowy).jpg"/></a>
 						<div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
