about me update

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                 <!-- About Section Content-->
               <div class="row">
                     <div class="col-lg-4 ms-auto">
-                      <p class="lead">I am a game developer fresh out of college. I mainly specialize in game design as well as basic programming in UE4 and Unity engines.</p>
-                      <p class="lead">I do also, however, have some experience with 2D Art and level design.</p>
+                      <p class="lead">I am a game designer with hands-on experience in both commercial projects and smaller, independent games developed during game jams and academic work.</p>
+                      <p class="lead">My passion lies in gameplay and quest design, but I also bring a working understanding of programming and art, which helps me communicate and collaborate across different parts of development.</p>
                     </div>
                     <div class="col-lg-4 me-auto"><p class="lead">I'm always excited to work on some new projects!</p></div>
                 </div>
